# llm-training

./: pyproject.toml
src/common/: embedding_model.py  word_dataset.py
src/embeddings/: part1_embed_learnEmbeddings.py
src/embeddings/common/: embedding_model.py  train_embeeding_model.py  word_dataset.py
src/llms/: build_llm_model.py  build_llm_transfomer_model_multi_head_attantion.py  build_llm_transfomer_model_one_head_attantion.py  part1_build_llm_model_1.py
src/llms/common/: llm_model.py  token_dataset.py
src/llms/transformer/multi_head_attention/: multi_head_attention.py  multi_head_attention_model.py  multi_head_transformer_block.py
src/llms/transformer/one_head_attention/: one_head_attention.py  one_head_attention_model.py  one_head_attention_transformer_block.py
src/llms/zero_layer/: train_zero_layer_transformer.py  zero_layer_transformer.py
