[project]
name = "llm-training"
version = "0.1.0"
description = "Project as material to learing explain how to train LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "torchinfo==1.8.0",
    "requests>=2.32.5",
    "numpy>=2.3.3",
    "matplotlib>=3.10.7",
    "tiktoken==0.12.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
